--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
     "styled-components": "^5.3.8",
+    "url-metadata": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
